--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,19 @@
+# Application name and server port (optional, as you already have these)
 spring.application.name=remote-pc-control
 server.port=8090
-spring.h2.console.enabled=true
-spring.datasource.generate-unique-name=false
-spring.datasource.name=desktop-controller
+
+# PostgreSQL DataSource configuration for AWS RDS
+spring.datasource.url=jdbc:postgresql://desktop-controller.cn68yyueoyjo.us-east-1.rds.amazonaws.com:5432/desktop-controller
+spring.datasource.username=usercontroller
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# (Optional) JPA / Hibernate configuration if you are using them
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging (as before)
 logging.level.org.springframework.jdbc=INFO
+
+# Disable H2 console if no longer needed
+spring.h2.console.enabled=false
